<resources>
    <string name="app_name">Foodbye</string>

    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_search_recipes_activity">Search Recipe</string>
    <string name="facebook_app_id">495019934009322</string>

    <string name="hello_world">Hello world!</string>
    <string name="button_search">Search</string>
    <string name="enter_ingredients">Enter ingredients</string>
    <string name="mainLogo">mainLogo</string>


    <!-- START OF initial login screen elements -->
    <string name="foodbye_logo">foodbye_logo</string>
    <string name="facebook_sign_in_logo">facebook_sign_in_logo</string>
    <string name="login_email">email</string>
    <string name="password">password</string>
    <string name="hint_username">username</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="sign_in_button">Sign in</string>
    <string name="keep_logged_in">Keep me logged in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up_button">Sign Up</string>
    <!-- END OF initial login screen elements -->

    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="logout_label">Logout</string>

    <!-- START OF single item view elements -->
    <string name="recipe_title">Recipe title</string>
    <string name="rating">Rating</string>
    <string name="preparation_time">Prep time</string>
    <string name="cooking_time">Cook time</string>
    <string name="servings">Servings</string>
    <string name="kcal">Kcal</string>
    <string name="recipe_img">Recipe Image</string>
    <string name="nutrition_search_button">Nutrition</string>
    <string name="my_ingredients">My Ingredients</string>
    <string name="action_new">New Ingredient</string>
    <string name="title_activity_edit_ingredient">EditIngredientActivity</string>
    <!-- END OF single item view elements -->

    <!-- START OF edit ingredients -->
    <string name="ingredient_name_hint">Name</string>
    <string name="save_button">Add</string>
    <!-- END OF edit ingredients -->

    <string name="ingredients">Ingredients</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_id">Recipe id</string>

</resources>
